--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=skinet.db"
+    "DefaultConnection": "Data source=skinet.db",
+    "Redis": "localhost"
   },
   "ApiUrl": "Https://localhost:5001/"
 }
